# EdgeDetector

./: CMakeLists.txt  Readme.md
include/: EdgeDetector.cpp  EdgeDetector.hpp
src/: EdgeDetector.cpp
